tests/fixtures/compile_errors/invalid_chain_field.fe
contract Foo:

  pub def foo():
    chain.foo